# sdkwork-community

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: governance.yml
.sdkwork/: README.md
apis/: README.md
apis/backend-api/community/: openapi.json
apis/open-api/community/: openapi.json
apps/: README.md
apps/sdkwork-community-common/: README.md
apps/sdkwork-community-flutter-mobile/: AGENTS.md  README.md  pubspec.yaml  sdkwork.app.config.json
apps/sdkwork-community-flutter-mobile/.sdkwork/: README.md
apps/sdkwork-community-flutter-mobile/docs/: INDEX.yaml  README.md
apps/sdkwork-community-flutter-mobile/etc/: sdkwork.deployment.config.json
apps/sdkwork-community-flutter-mobile/lib/: app.dart
apps/sdkwork-community-flutter-mobile/specs/: dependency.composition.json
apps/sdkwork-community-h5/: AGENTS.md  README.md  index.html  package.json  pnpm-workspace.yaml  sdkwork.app.config.json
apps/sdkwork-community-h5/.sdkwork/: README.md
apps/sdkwork-community-h5/docs/: INDEX.yaml  README.md
apps/sdkwork-community-h5/etc/: sdkwork.deployment.config.json
apps/sdkwork-community-h5/specs/: dependency.composition.json
apps/sdkwork-community-h5/src/: App.tsx  AuthGate.tsx
apps/sdkwork-community-pc/: AGENTS.md  README.md  index.html  package.json  sdkwork.app.config.json  tsconfig.json  vite.config.ts
apps/sdkwork-community-pc/.sdkwork/: README.md
apps/sdkwork-community-pc/docs/: INDEX.yaml  README.md
apps/sdkwork-community-pc/etc/: sdkwork.deployment.config.json
apps/sdkwork-community-pc/specs/: dependency.composition.json
apps/sdkwork-community-pc/src/: App.tsx  index.css  main.tsx
configs/: README.md  sdkwork-api-cloud-gateway.community.development.toml  sdkwork-api-cloud-gateway.community.production.toml
configs/topology/: cloud.development.env  cloud.production.env  cloud.split-services.production.env  standalone.development.env  standalone.production.env  standalone.unified-process.development.env  standalone.unified-process.production.env
crates/sdkwork-api-community-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-community-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-community-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-community-standalone-gateway/: Cargo.toml
crates/sdkwork-api-community-standalone-gateway/specs/: component.spec.json
crates/sdkwork-api-community-standalone-gateway/src/: main.rs
crates/sdkwork-community-core-rust/: Cargo.toml  README.md
crates/sdkwork-community-core-rust/specs/: README.md  component.spec.json
crates/sdkwork-community-core-rust/src/: lib.rs
crates/sdkwork-community-core-rust/tests/: community_core_standard.rs
crates/sdkwork-community-database-host/: Cargo.toml
crates/sdkwork-community-database-host/specs/: README.md  component.spec.json
crates/sdkwork-community-database-host/src/: lib.rs
crates/sdkwork-community-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-community-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-community-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-community-http-rust/: Cargo.toml  README.md
crates/sdkwork-community-http-rust/specs/: README.md  component.spec.json
crates/sdkwork-community-http-rust/src/: lib.rs
crates/sdkwork-community-http-rust/tests/: community_http_standard.rs
crates/sdkwork-community-service/: Cargo.toml
crates/sdkwork-community-service-host/: Cargo.toml
crates/sdkwork-community-service-host/specs/: component.spec.json
crates/sdkwork-community-service-host/src/: lib.rs
crates/sdkwork-community-service/specs/: component.spec.json
crates/sdkwork-community-service/src/: error.rs  lib.rs  service.rs
crates/sdkwork-community-standalone-gateway/: Cargo.toml
crates/sdkwork-community-standalone-gateway/specs/: component.spec.json
crates/sdkwork-community-standalone-gateway/src/: main.rs
crates/sdkwork-community-storage-sqlx-rust/: Cargo.toml  README.md
crates/sdkwork-community-storage-sqlx-rust/migrations/: 0001_community_foundation.sql
crates/sdkwork-community-storage-sqlx-rust/specs/: README.md  component.spec.json
crates/sdkwork-community-storage-sqlx-rust/src/: bootstrap.rs  community_sqlx_store.rs  lib.rs  postgres_queries.rs  sqlite_queries.rs
crates/sdkwork-community-storage-sqlx-rust/tests/: community_storage_standard.rs
crates/sdkwork-routes-community-app-api/: Cargo.toml
crates/sdkwork-routes-community-app-api/specs/: component.spec.json
crates/sdkwork-routes-community-app-api/src/: lib.rs  routes.rs
crates/sdkwork-routes-community-app-api/tests/: app_http_routes.rs
crates/sdkwork-routes-community-backend-api/: Cargo.toml
crates/sdkwork-routes-community-common/: Cargo.toml
crates/sdkwork-routes-community-open-api/: Cargo.toml
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
deployments/: README.md  deploy.yaml
deployments/docker/: README.md
docs/: INDEX.yaml  README.md
docs/product/prd/: PRD.md
examples/: README.md
plugins/: README.md
scripts/: clean-artifacts.mjs  community-dev.mjs  community-workspace-boundary.test.mjs
sdks/sdkwork-community-app-sdk/: .sdkwork-assembly.json  README.md  package.json  sdk-manifest.json
sdks/sdkwork-community-backend-sdk/: .sdkwork-assembly.json  README.md  package.json  sdk-manifest.json
sdks/sdkwork-community-sdk/: .sdkwork-assembly.json  README.md  package.json  sdk-manifest.json
sdks/test/: community-openapi-boundary.test.mjs  community-schema-quality-gate.test.mjs
specs/: README.md  component.spec.json  iam.module.manifest.json  topology.spec.json
tests/: README.md
tools/: community_openapi_export.mjs  community_schema_quality_gate.mjs  community_sdk_generate.mjs  community_sdk_generator_runner.mjs  materialize_community_database_contract.mjs
(+70 files in other folders)
