[workspace]
members = [
    "crates/sdkwork-api-community-assembly",
    "crates/sdkwork-community-core-rust",
    "crates/sdkwork-community-database-host",
    "crates/sdkwork-community-storage-sqlx-rust",
    "crates/sdkwork-community-http-rust",
    "crates/sdkwork-community-service",
    "crates/sdkwork-routes-community-common",
    "crates/sdkwork-routes-community-open-api",
    "crates/sdkwork-routes-community-app-api",
    "crates/sdkwork-routes-community-backend-api",
    "crates/sdkwork-community-service-host",
    "crates/sdkwork-api-community-assembly",
    "crates/sdkwork-api-community-standalone-gateway",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "AGPL-3.0-or-later"
publish = false

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"
sdkwork-community-core-rust = { path = "crates/sdkwork-community-core-rust" }
sdkwork-community-database-host = { path = "crates/sdkwork-community-database-host" }
sdkwork-community-storage-sqlx-rust = { path = "crates/sdkwork-community-storage-sqlx-rust" }
sdkwork-community-http-rust = { path = "crates/sdkwork-community-http-rust" }
sdkwork-community-service = { path = "crates/sdkwork-community-service" }
sdkwork-routes-community-common = { path = "crates/sdkwork-routes-community-common" }
sdkwork-routes-community-open-api = { path = "crates/sdkwork-routes-community-open-api" }
sdkwork-routes-community-app-api = { path = "crates/sdkwork-routes-community-app-api" }
sdkwork-routes-community-backend-api = { path = "crates/sdkwork-routes-community-backend-api" }
sdkwork-community-service-host = { path = "crates/sdkwork-community-service-host" }
sdkwork-api-community-assembly = { path = "crates/sdkwork-api-community-assembly" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_context_service = { path = "../sdkwork-iam/crates/sdkwork-iam-context-service", package = "sdkwork-iam-context-service" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
