[package]
name = "sdkwork-api-community-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-community application HTTP plane."

[lib]
name = "sdkwork_api_community_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-community-service-host.workspace = true
sdkwork-routes-community-app-api.workspace = true
sdkwork-routes-community-backend-api.workspace = true
sdkwork-routes-community-open-api.workspace = true
