[package]
name = "sdkwork-community-gateway-assembly"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum.workspace = true
sdkwork-community-service-host.workspace = true
sdkwork-routes-community-app-api.workspace = true
sdkwork-routes-community-backend-api.workspace = true
sdkwork-routes-community-open-api.workspace = true
