[package]
name = "sdkwork-community-service-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dotenvy.workspace = true
sdkwork-community-database-host.workspace = true
sdkwork-community-service.workspace = true
sdkwork-community-storage-sqlx-rust.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
