[package]
name = "sdkwork-community-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "sdkwork-community-standalone-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
sdkwork-community-gateway-assembly.workspace = true
sdkwork-community-service-host.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-web-bootstrap.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
