[package]
name = "sdkwork-community-storage-sqlx-rust"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_community_storage_sqlx"
path = "src/lib.rs"

[dependencies]
sdkwork-database-config = { path = "../../../sdkwork-pool/crates/sdkwork-database-config" }
sdkwork-database-sqlx = { path = "../../../sdkwork-pool/crates/sdkwork-database-sqlx" }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
