[package]
name = "sdkwork-community-storage-sqlx-rust"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_community_storage_sqlx"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
sdkwork-community-database-host.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-utils-rust.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "postgres"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
